ws04_tools/tf_broadcast_point/colcon_build_log.txt
idris@idris:~/ROS2_Learning/ws04_tools$ colcon build --packages-select tf_broadcast_point >> tf_broadcas
t_point/colcon_build_log.txt 
--- stderr: tf_broadcast_point
In file included from /opt/ros/humble/include/tf2_ros/tf2_ros/message_filter.hpp:52,
                 from /opt/ros/humble/include/tf2_ros/tf2_ros/message_filter.h:35,
                 from /home/idris/ROS2_Learning/ws04_tools/tf_broadcast_point/src/tf_broadcaster_point.cpp:5:
/opt/ros/humble/include/message_filters/message_filters/simple_filter.h: In instantiation of ‘message_filters::Connection message_filters::SimpleFilter<M>::registerCallback(const C&) [with C = std::_Bind<void (TFBroadcasterPoint::*(TFBroadcasterPoint*, std::_Placeholder<1>))(const std::shared_ptr<geometry_msgs::msg::PointStamped_<std::allocator<void> > >&)>; M = geometry_msgs::msg::PointStamped_<std::allocator<void> >]’:
/home/idris/ROS2_Learning/ws04_tools/tf_broadcast_point/src/tf_broadcaster_point.cpp:44:36:   required from here
/opt/ros/humble/include/message_filters/message_filters/simple_filter.h:72:67: error: no matching function for call to ‘std::function<void(const std::shared_ptr<const geometry_msgs::msg::PointStamped_<std::allocator<void> > >&)>::function(const std::_Bind<void (TFBroadcasterPoint::*(TFBroadcasterPoint*, std::_Placeholder<1>))(const std::shared_ptr<geometry_msgs::msg::PointStamped_<std::allocator<void> > >&)>&)’
   72 |     typename CallbackHelper1<M>::Ptr helper = signal_.addCallback(Callback(callback));
      |                                                                   ^~~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/11/future:47,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors.hpp:18,
                 from /opt/ros/humble/include/rclcpp/rclcpp/rclcpp.hpp:155,
                 from /home/idris/ROS2_Learning/ws04_tools/tf_broadcast_point/src/tf_broadcaster_point.cpp:1:
/usr/include/c++/11/bits/std_function.h:435:9: note: candidate: ‘template<class _Functor, class _Constraints> std::function<_Res(_ArgTypes ...)>::function(_Functor&&) [with _Functor = _Functor; _Constraints = _Constraints; _Res = void; _ArgTypes = {const std::shared_ptr<const geometry_msgs::msg::PointStamped_<std::allocator<void> > >&}]’
  435 |         function(_Functor&& __f)
      |         ^~~~~~~~
/usr/include/c++/11/bits/std_function.h:435:9: note:   template argument deduction/substitution failed:
In file included from /usr/include/c++/11/bits/move.h:57,
                 from /usr/include/c++/11/bits/stl_pair.h:59,
                 from /usr/include/c++/11/bits/stl_algobase.h:64,
                 from /usr/include/c++/11/memory:63,
                 from /opt/ros/humble/include/rclcpp/rclcpp/rclcpp.hpp:153,
                 from /home/idris/ROS2_Learning/ws04_tools/tf_broadcast_point/src/tf_broadcaster_point.cpp:1:
/usr/include/c++/11/type_traits: In substitution of ‘template<bool _Cond, class _Tp> using __enable_if_t = typename std::enable_if::type [with bool _Cond = false; _Tp = void]’:
/usr/include/c++/11/bits/std_function.h:353:8:   required by substitution of ‘template<class _Res, class ... _ArgTypes> template<class _Cond, class _Tp> using _Requires = std::__enable_if_t<_Cond::value, _Tp> [with _Cond = std::function<void(const std::shared_ptr<const geometry_msgs::msg::PointStamped_<std::allocator<void> > >&)>::_Callable<const std::_Bind<void (TFBroadcasterPoint::*(TFBroadcasterPoint*, std::_Placeholder<1>))(const std::shared_ptr<geometry_msgs::msg::PointStamped_<std::allocator<void> > >&)>&, std::_Bind<void (TFBroadcasterPoint::*(TFBroadcasterPoint*, std::_Placeholder<1>))(const std::shared_ptr<geometry_msgs::msg::PointStamped_<std::allocator<void> > >&)>, std::__invoke_result<std::_Bind<void (TFBroadcasterPoint::*(TFBroadcasterPoint*, std::_Placeholder<1>))(const std::shared_ptr<geometry_msgs::msg::PointStamped_<std::allocator<void> > >&)>&, const std::shared_ptr<const geometry_msgs::msg::PointStamped_<std::allocator<void> > >&> >; _Tp = void; _Res = void; _ArgTypes = {const std::shared_ptr<const geometry_msgs::msg::PointStamped_<std::allocator<void> > >&}]’
/usr/include/c++/11/bits/std_function.h:434:9:   required from ‘message_filters::Connection message_filters::SimpleFilter<M>::registerCallback(const C&) [with C = std::_Bind<void (TFBroadcasterPoint::*(TFBroadcasterPoint*, std::_Placeholder<1>))(const std::shared_ptr<geometry_msgs::msg::PointStamped_<std::allocator<void> > >&)>; M = geometry_msgs::msg::PointStamped_<std::allocator<void> >]’
/home/idris/ROS2_Learning/ws04_tools/tf_broadcast_point/src/tf_broadcaster_point.cpp:44:36:   required from here
/usr/include/c++/11/type_traits:2205:11: error: no type named ‘type’ in ‘struct std::enable_if<false, void>’
 2205 |     using __enable_if_t = typename enable_if<_Cond, _Tp>::type;
      |           ^~~~~~~~~~~~~
In file included from /usr/include/c++/11/future:47,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors.hpp:18,
                 from /opt/ros/humble/include/rclcpp/rclcpp/rclcpp.hpp:155,
                 from /home/idris/ROS2_Learning/ws04_tools/tf_broadcast_point/src/tf_broadcaster_point.cpp:1:
/opt/ros/humble/include/message_filters/message_filters/simple_filter.h: In instantiation of ‘message_filters::Connection message_filters::SimpleFilter<M>::registerCallback(const C&) [with C = std::_Bind<void (TFBroadcasterPoint::*(TFBroadcasterPoint*, std::_Placeholder<1>))(const std::shared_ptr<geometry_msgs::msg::PointStamped_<std::allocator<void> > >&)>; M = geometry_msgs::msg::PointStamped_<std::allocator<void> >]’:
/home/idris/ROS2_Learning/ws04_tools/tf_broadcast_point/src/tf_broadcaster_point.cpp:44:36:   required from here
/usr/include/c++/11/bits/std_function.h:404:7: note: candidate: ‘std::function<_Res(_ArgTypes ...)>::function(std::function<_Res(_ArgTypes ...)>&&) [with _Res = void; _ArgTypes = {const std::shared_ptr<const geometry_msgs::msg::PointStamped_<std::allocator<void> > >&}]’
  404 |       function(function&& __x) noexcept
      |       ^~~~~~~~
/usr/include/c++/11/bits/std_function.h:404:27: note:   no known conversion for argument 1 from ‘const std::_Bind<void (TFBroadcasterPoint::*(TFBroadcasterPoint*, std::_Placeholder<1>))(const std::shared_ptr<geometry_msgs::msg::PointStamped_<std::allocator<void> > >&)>’ to ‘std::function<void(const std::shared_ptr<const geometry_msgs::msg::PointStamped_<std::allocator<void> > >&)>&&’
  404 |       function(function&& __x) noexcept
      |                ~~~~~~~~~~~^~~
/usr/include/c++/11/bits/std_function.h:386:7: note: candidate: ‘std::function<_Res(_ArgTypes ...)>::function(const std::function<_Res(_ArgTypes ...)>&) [with _Res = void; _ArgTypes = {const std::shared_ptr<const geometry_msgs::msg::PointStamped_<std::allocator<void> > >&}]’
  386 |       function(const function& __x)
      |       ^~~~~~~~
/usr/include/c++/11/bits/std_function.h:386:32: note:   no known conversion for argument 1 from ‘const std::_Bind<void (TFBroadcasterPoint::*(TFBroadcasterPoint*, std::_Placeholder<1>))(const std::shared_ptr<geometry_msgs::msg::PointStamped_<std::allocator<void> > >&)>’ to ‘const std::function<void(const std::shared_ptr<const geometry_msgs::msg::PointStamped_<std::allocator<void> > >&)>&’
  386 |       function(const function& __x)
      |                ~~~~~~~~~~~~~~~~^~~
/usr/include/c++/11/bits/std_function.h:375:7: note: candidate: ‘std::function<_Res(_ArgTypes ...)>::function(std::nullptr_t) [with _Res = void; _ArgTypes = {const std::shared_ptr<const geometry_msgs::msg::PointStamped_<std::allocator<void> > >&}; std::nullptr_t = std::nullptr_t]’
  375 |       function(nullptr_t) noexcept
      |       ^~~~~~~~
/usr/include/c++/11/bits/std_function.h:375:16: note:   no known conversion for argument 1 from ‘const std::_Bind<void (TFBroadcasterPoint::*(TFBroadcasterPoint*, std::_Placeholder<1>))(const std::shared_ptr<geometry_msgs::msg::PointStamped_<std::allocator<void> > >&)>’ to ‘std::nullptr_t’
  375 |       function(nullptr_t) noexcept
      |                ^~~~~~~~~
/usr/include/c++/11/bits/std_function.h:368:7: note: candidate: ‘std::function<_Res(_ArgTypes ...)>::function() [with _Res = void; _ArgTypes = {const std::shared_ptr<const geometry_msgs::msg::PointStamped_<std::allocator<void> > >&}]’
  368 |       function() noexcept
      |       ^~~~~~~~
/usr/include/c++/11/bits/std_function.h:368:7: note:   candidate expects 0 arguments, 1 provided
gmake[2]: *** [CMakeFiles/tf_broadcaster_point.dir/build.make:76：CMakeFiles/tf_broadcaster_point.dir/src/tf_broadcaster_point.cpp.o] 错误 1
gmake[1]: *** [CMakeFiles/Makefile2:137：CMakeFiles/tf_broadcaster_point.dir/all] 错误 2
gmake: *** [Makefile:146：all] 错误 2
---
Failed   <<< tf_broadcast_point [7.87s, exited with code 2]